--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev":"nodemon --watch index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "pg": "^8.16.3"
+  },
+  "eslintConfig": {
+    "extends":"standard"
   }
 }
