--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
+    "oci-sdk": "^2.117.0",
     "pg": "^8.16.3"
   },
   "eslintConfig": {
